src/views/Home/home.module.css
.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.title {
  padding: 16px;
  font-size: var(--font-size-2xl);
  font-weight: var(--font-weight-semi-bold);
}

.input {
  width: 320px;
  max-width: 100%;
}

.input input {
  font-size: 60px;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
}

.button {
  margin: 8px;
  padding: 12px 24px;
  border-radius: 24px;
  background-color: #f0f0f0;
  border: none;
  cursor: pointer;
}

.circle {
  width: 360px;
  height: 360px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  overflow: hidden;
}

.circle svg {
  position: absolute;
  top: 0;
  left: 0;
}

.inner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

